# blvm-sdk

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  test-maintainer-1.key  test-maintainer-2.key
.github/workflows/: ci.yml  coverage.yml  release.yml  security.yml
docs/: BINARY_SIGNING.md  api-reference.md
examples/: governance_signing.rs  governance_verification.rs  multisig_workflow.rs
src/: lib.rs
src/composition/: composer.rs  config.rs  conversion.rs  lifecycle.rs  mod.rs  registry.rs  schema.rs  types.rs  validation.rs
src/governance/: bip32.rs  bip39.rs  bip44.rs  error.rs  mod.rs  psbt.rs
src/module/: manifest.rs  mod.rs  traits.rs
src/module/ipc/: client.rs  mod.rs  protocol.rs
src/module/security/: mod.rs  permissions.rs
tests/: bip32_bip39_bip44_tests.rs  cli_utilities_tests.rs  composition_tests.rs  psbt_tests.rs
