[package]
name = "bllvm-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Bitcoin Commons Contributors"]
description = "Bitcoin Commons software developer kit, governance infrastructure and composition framework for Bitcoin"
license = "MIT"
repository = "https://github.com/BTCDecoded/bllvm-sdk"
homepage = "https://github.com/BTCDecoded/bllvm-sdk"
documentation = "https://docs.rs/bllvm-sdk"
keywords = ["bitcoin", "governance", "cryptography", "consensus"]
categories = ["cryptography", "development-tools"]

[dependencies]
# Governance cryptography (Bitcoin-compatible)
secp256k1 = { version = "=0.28.2", features = ["rand", "global-context"] }
bitcoin = "=0.31.2"  # For message signing standards
sha2 = "=0.10.9"  # SHA256 for checksums, SHA512 for seed derivation
hmac = "=0.12.1"
ripemd = "=0.1.3"
pbkdf2 = "=0.12.2"  # PBKDF2-SHA512 for BIP39 seed derivation

# Serialization
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.108"

# Error handling
thiserror = "=1.0.69"

# Encoding
hex = "=0.4.3"
base64 = "=0.21.5"

# Random number generation
rand = "=0.8.5"

# Date/time
chrono = { version = "=0.4.35", features = ["serde"] }

# CLI dependencies
clap = { version = "=4.4.11", features = ["derive"] }

# Composition framework dependencies
toml = "=0.8.2"
bllvm-node = { path = "../bllvm-node", package = "bllvm-node" }
tokio = { version = "=1.48.0", features = ["rt", "macros", "sync"] }

# Local development: Use local path dependencies instead of crates.io versions
# Local development: Use .cargo/config.toml to override dependencies with local paths
# This allows you to develop against local changes without publishing
# For CI jobs that checkout dependencies, .cargo/config.toml is created automatically

[patch.crates-io]
# Use local bllvm-protocol instead of published version
bllvm-protocol = { path = "../bllvm-protocol" }
bllvm-consensus = { path = "../bllvm-consensus" }

[dev-dependencies]
# Testing
criterion = "=0.5.1"  # Benchmarking
tempfile = "=3.8.1"  # Temporary files for tests

[[bin]]
name = "bllvm-keygen"
path = "src/bin/bllvm-keygen.rs"

[[bin]]
name = "bllvm-sign"
path = "src/bin/bllvm-sign.rs"

[[bin]]
name = "bllvm-verify"
path = "src/bin/bllvm-verify.rs"

[[bin]]
name = "bllvm-compose"
path = "src/bin/bllvm-compose.rs"

[[bin]]
name = "bllvm-sign-binary"
path = "src/bin/bllvm-sign-binary.rs"

[[bin]]
name = "bllvm-verify-binary"
path = "src/bin/bllvm-verify-binary.rs"

[[bin]]
name = "bllvm-aggregate-signatures"
path = "src/bin/bllvm-aggregate-signatures.rs"
